--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
+    "@cloudscape-design/chat-components": "^1.0.19",
     "@cloudscape-design/components": "^3.0.840",
     "@cloudscape-design/global-styles": "^1.0.33",
     "aws-amplify": "^6.6.6",
