--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.713.0",
     "@cloudscape-design/chat-components": "^1.0.19",
     "@cloudscape-design/components": "^3.0.840",
     "@cloudscape-design/global-styles": "^1.0.33",
     "aws-amplify": "^6.10.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.0",
