--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-react": "^6.5.5",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.713.0",
     "@aws-sdk/client-bedrock-runtime": "^3.714.0",
+    "@aws-sdk/client-transcribe": "^3.721.0",
     "@cloudscape-design/chat-components": "^1.0.19",
     "@cloudscape-design/components": "^3.0.840",
     "@cloudscape-design/global-styles": "^1.0.33",
