--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
+    "@aws-sdk/client-bedrock-agent": "^3.721.0",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.713.0",
     "@aws-sdk/client-bedrock-runtime": "^3.714.0",
     "@aws-sdk/client-transcribe": "^3.721.0",
